--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
   <!-- Display the map and title with HTML division tags  -->
-  <div id="map-title">EDIT map title</div>
+  <div id="Map of Raleigh">EDIT map title</div>
   <div id="map"></div>
 
   <!-- Create the interactive map content with JavaScript (.js) -->
@@ -27,9 +27,9 @@
 
   /* Set up the initial map center and zoom level */
   var map = L.map('map', {
-    center: [41.77, -72.69], // EDIT coordinates to re-center map
+    center: [35.7850131,-78.681393], // EDIT coordinates to re-center map
     zoom: 12,  // EDIT from 1 (zoomed out) to 18 (zoomed in)
-    scrollWheelZoom: false
+    scrollWheelZoom: true
   });
 
   /* display basemap tiles -- see others at https://leaflet-extras.github.io/leaflet-providers/preview/ */
@@ -41,9 +41,20 @@
   }).addTo(map);
 
   /* Display a point marker with pop-up text */
-  L.marker([41.77, -72.69]).addTo(map) // EDIT marker coordinates
-  .bindPopup("Insert pop-up text here"); // EDIT pop-up text message
+  L.marker([35.7850131,-78.681393]).addTo(map) // EDIT marker coordinates
+  .bindPopup("NCSU"); // EDIT pop-up text message
 
+  /* Display a point marker with pop-up text */
+  L.marker([35.7822924,-78.6777247]).addTo(map) // EDIT marker coordinates
+  .bindPopup("Biltmore"); // EDIT pop-up text message
+
+  /* Display a point marker with pop-up text */
+  L.marker([35.8001679,-78.7168831]).addTo(map) // EDIT marker coordinates
+  .bindPopup("Free Parking"); // EDIT pop-up text message
+
+  /* Display a point marker with pop-up text */
+  L.marker([35.7875188,-78.6698098]).addTo(map) // EDIT marker coordinates
+  .bindPopup("Hill Library"); // EDIT pop-up text message
   </script>
 </body>
 </html>
